fix: scrollbar and gallery image flex

--- a/src/styles/partials/global.styl
+++ b/src/styles/partials/global.styl
@@ -36,18 +36,20 @@ body
   @extend $font-default
   display: flex
   justify-content: center
+  &, *
+    -ms-overflow-style: none;  // IE 10+
+    scrollbar-width: none;  // Firefox
+
+  ::-webkit-scrollbar
+    display: none;  // Safari and Chrome
+
+  ::-webkit-scrollbar-thumb
+    background: #FF0000
 
 main, header
   overflow-y: scroll
   scroll-behavior: smooth
   box-sizing: border-box
-
-  &
-    -ms-overflow-style: none;  // IE 10+
-    scrollbar-width: none;  // Firefox
-
-  &::-webkit-scrollbar
-    display: none;  // Safari and Chrome
 
 p, a, span
   margin: 0
