--- a/src/styles/partials/work.styl
+++ b/src/styles/partials/work.styl
@@ -19,6 +19,7 @@
       w = s('calc(100% - %s)', $spacing.xxhg)
       width: 100%
       max-width: w
+      flex: 1 0 w
       margin-right: $spacing.lg
 
       +hd()
